fixes font -- checking overflow for main

--- a/app/assets/stylesheets/recipe_show.scss
+++ b/app/assets/stylesheets/recipe_show.scss
@@ -11,7 +11,7 @@
       a {
         color: gold;
         text-decoration: none;
-        font-family: 'arapeyitalic';
+        font-family: 'arapeyregular';
       }
     }
   }
